--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 .myname {
     background-color: teal;
 }
+
+ .navbar-brand {
+     color: white !important;
+     padding: 0;
+     margin: 0;
+ }
+
+.nav-link {
+    float: right;
+    color: black;
+}
+
+body {
+    background-image: url("./ignasi_pattern_s.png");
+}
+
