--- a/style.css
+++ b/style.css
@@ -17,3 +17,10 @@ body {
     background-image: url("./ignasi_pattern_s.png");
 }
 
+.footer {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    background-color: rgb(44, 42, 42) !important;
+    color: rgb(54, 42, 42);
+}
